--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Éditeur{% endblock %}
+{% block title %}Rédiger un article{% endblock %}
 
 {% block content %}
-    <h1>Éditeur</h1>
+<div class="card shadow-lg p-4 mb-4 w-100">
+    <h1 class="card-title">Rédiger un article</h1>
     <form method="post">
         <div class="form-group">
             <label for="site">Site</label>
@@ -23,4 +24,5 @@
         </div>
         <button type="submit" class="btn btn-primary">Publier</button>
     </form>
+</div>
 {% endblock %}
