--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('editor') }}">Rédiger un article</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('settings') }}">Paramètres</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -28,5 +31,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    {% block scripts %}{% endblock %}
 </body>
 </html>
