--- a/templates/add_domain.html
+++ b/templates/add_domain.html
@@ -42,8 +42,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
+    console.log('Script loaded');
+
     var socket = io.connect('https://' + document.domain + ':' + location.port);
     socket.on('message', function(msg) {
+        console.log('Received message:', msg);
         var messages = document.getElementById('messages');
         var message = document.createElement('div');
         message.className = 'alert alert-info mt-4';
@@ -52,6 +55,7 @@
     });
 
     socket.on('error', function(msg) {
+        console.log('Received error:', msg);
         var messages = document.getElementById('messages');
         var message = document.createElement('div');
         message.className = 'alert alert-danger mt-4';
@@ -60,6 +64,7 @@
     });
 
     socket.on('confirm', function(data) {
+        console.log('Received confirmation:', data);
         $('#confirmationModal').modal('show');
         $('#confirmationMessage').text(data.message);
         $('#confirmButton').data('action', data.action);
@@ -68,12 +73,14 @@
     $('#confirmButton').on('click', function() {
         var action = $(this).data('action');
         var domain = $('#domain').val();
+        console.log('Confirm button clicked with action:', action, 'and domain:', domain);
         $.ajax({
             type: 'POST',
             url: '{{ url_for("confirm_action") }}',
             data: JSON.stringify({action: action, domain: domain}),
             contentType: 'application/json',
             success: function() {
+                console.log('Confirmation action successful');
                 $('#confirmationModal').modal('hide');
             }
         });
@@ -82,30 +89,31 @@
     document.getElementById('domainForm').addEventListener('submit', function(event) {
         event.preventDefault();
         var domain = $('#domain').val();
+        console.log('Form submitted with domain:', domain);
         var submitButton = document.getElementById('submitButton');
         submitButton.disabled = true;
         checkDomainOwnership(domain);
     });
 
     function checkDomainOwnership(domain) {
+        console.log('Checking domain ownership for:', domain);
         $.post('{{ url_for("check_domain_ownership") }}', {domain: domain}, function(data) {
+            console.log('Domain ownership check result:', data);
             if (data.status === 'owned') {
-                // Domain is already owned, configure dns
                 configureDNS(domain);
             } else if (data.status === 'not_owned') {
-                // Domain is not owned, check availability
                 checkDomainAvailability(domain);
             }
         });
     }
 
     function checkDomainAvailability(domain) {
+        console.log('Checking domain availability for:', domain);
         $.post('{{ url_for("check_domain_availability") }}', {domain: domain}, function(data) {
+            console.log('Domain availability check result:', data);
             if (data.status === 'available') {
-                // Domain is available, purchase it
                 purchaseDomain(domain);
             } else if (data.status === 'not_available') {
-                // Domain is not available, show error message
                 var messages = document.getElementById('messages');
                 var message = document.createElement('div');
                 message.className = 'alert alert-danger mt-4';
@@ -117,12 +125,12 @@
     }
 
     function purchaseDomain(domain) {
+        console.log('Purchasing domain:', domain);
         $.post('{{ url_for("purchase_domain_route") }}', {domain: domain}, function(data) {
+            console.log('Domain purchase result:', data);
             if (data.status === 'purchased') {
-                // Domain purchased, configure DNS
                 configureDNS(domain);
             } else if (data.status === 'error') {
-                // Error purchasing domain, show error message
                 var messages = document.getElementById('messages');
                 var message = document.createElement('div');
                 message.className = 'alert alert-danger mt-4';
@@ -134,12 +142,12 @@
     }
 
     function configureDNS(domain) {
+        console.log('Configuring DNS for:', domain);
         $.post('{{ url_for("configure_dns_route") }}', {domain: domain}, function(data) {
+            console.log('DNS configuration result:', data);
             if (data.status === 'configured') {
-                // DNS configured, create Nginx config
                 createNginxConfig(domain);
             } else if (data.status === 'error') {
-                // Error configuring DNS, show error message
                 var messages = document.getElementById('messages');
                 var message = document.createElement('div');
                 message.className = 'alert alert-danger mt-4';
@@ -151,12 +159,12 @@
     }
 
     function createNginxConfig(domain) {
+        console.log('Creating Nginx config for:', domain);
         $.post('{{ url_for("create_nginx_config_route") }}', {domain: domain}, function(data) {
+            console.log('Nginx config creation result:', data);
             if (data.status === 'created') {
-                // Nginx config created, set up SSL
                 setupSSL(domain);
             } else if (data.status === 'ssl_error') {
-                // Error setting up SSL, show error message
                 var messages = document.getElementById('messages');
                 var message = document.createElement('div');
                 message.className = 'alert alert-danger mt-4';
@@ -164,7 +172,6 @@
                 messages.insertBefore(message, messages.firstChild);
                 submitButton.disabled = false;
             } else if (data.status === 'error') {
-                // Error creating Nginx config, show error message
                 var messages = document.getElementById('messages');
                 var message = document.createElement('div');
                 message.className = 'alert alert-danger mt-4';
@@ -176,12 +183,12 @@
     }
 
     function setupSSL(domain) {
+        console.log('Setting up SSL for:', domain);
         $.post('{{ url_for("setup_ssl_route") }}', {domain: domain}, function(data) {
+            console.log('SSL setup result:', data);
             if (data.status === 'setup') {
-                // SSL set up, install WordPress
                 installWordPress(domain);
             } else if (data.status === 'error') {
-                // Error setting up SSL, show error message
                 var messages = document.getElementById('messages');
                 var message = document.createElement('div');
                 message.className = 'alert alert-danger mt-4';
@@ -193,9 +200,10 @@
     }
 
     function installWordPress(domain) {
+        console.log('Installing WordPress for:', domain);
         $.post('{{ url_for("install_wordpress_route") }}', {domain: domain}, function(data) {
+            console.log('WordPress installation result:', data);
             if (data.status === 'installed') {
-                // WordPress installed, show success message
                 var messages = document.getElementById('messages');
                 var message = document.createElement('div');
                 message.className = 'alert alert-success mt-4';
@@ -204,7 +212,6 @@
                 submitButton.disabled = false;
                 document.getElementById('domain').value = '';
             } else if (data.status === 'error') {
-                // Error installing WordPress, show error message
                 var messages = document.getElementById('messages');
                 var message = document.createElement('div');
                 message.className = 'alert alert-danger mt-4';
@@ -221,4 +228,3 @@
     });
 </script>
 {% endblock %}
-
