--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <div class="card shadow-lg p-4 mb-4 w-100">
     <h3 class="card-title">Monitoring des sites</h3>
     <div class="row">
-        {% for site in site_status %}
+        {% for site in sites %}
         <div class="col-md-4 mb-4">
             <div class="card">
                 <div class="card-body">
@@ -16,7 +16,7 @@
                         Dernier déploiement: {{ site.last_deployment }}
                     </p>
                     <a href="#" class="btn btn-primary">Se connecter au backoffice</a>
-                    <a href="{{ url_for('editor') }}" class="btn btn-secondary">Rédiger un article</a>
+                    <a href="{{ url_for('editor', site=site.domain) }}" class="btn btn-secondary">Rédiger un article</a>
                     <a href="#" class="btn btn-danger">Supprimer</a>
                 </div>
             </div>
