--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <div class="row">
         {% for site in sites %}
         <div class="col-md-4 mb-4">
-            <div class="card shadow-sm h-100">
+            <div class="card shadow-sm h-100 position-relative">
                 <div class="card-body d-flex flex-column">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h5 class="card-title mb-0">{{ site.domain }}</h5>
@@ -34,7 +34,9 @@
         height: 12px;
         border-radius: 50%;
         display: inline-block;
-        margin-left: 10px;
+        position: absolute;
+        right: 15px;
+        top: 15px;
     }
     .bg-success {
         background-color: #28a745;
