--- a/templates/editor.html
+++ b/templates/editor.html
@@ -25,6 +25,7 @@
         <button type="submit" class="btn btn-primary">Publier</button>
     </form>
 </div>
+<div id="messages"></div>
 {% endblock %}
 
 {% block scripts %}
@@ -34,6 +35,30 @@
             selector: '#content',
             language: 'fr_FR',
             language_url: "{{ url_for('static', filename='tinymce/langs/fr_FR.js') }}"
+        });
+    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
+    <script>
+        console.log('Script loaded');
+
+        var socket = io.connect('https://' + document.domain + ':' + location.port);
+        socket.on('message', function(msg) {
+            console.log('Received message:', msg);
+            var messages = document.getElementById('messages');
+            var message = document.createElement('div');
+            message.className = 'alert alert-info mt-4';
+            message.innerText = msg;
+            messages.insertBefore(message, messages.firstChild);
+        });
+
+        socket.on('error', function(msg) {
+            console.log('Received error:', msg);
+            var messages = document.getElementById('messages');
+            var message = document.createElement('div');
+            message.className = 'alert alert-danger mt-4';
+            message.innerText = msg;
+            messages.insertBefore(message, messages.firstChild);
         });
     </script>
 {% endblock %}
