--- a/templates/editor.html
+++ b/templates/editor.html
@@ -34,7 +34,7 @@
         tinymce.init({
             selector: '#content',
             language: 'fr_FR',
-            licence_key: 'gpl',
+            license_key: 'gpl',
             language_url: "{{ url_for('static', filename='tinymce/langs/fr_FR.js') }}"
         });
     </script>
