--- a/templates/editor.html
+++ b/templates/editor.html
@@ -35,7 +35,12 @@
             selector: '#content',
             language: 'fr_FR',
             license_key: 'gpl',
-            language_url: "{{ url_for('static', filename='tinymce/langs/fr_FR.js') }}"
+            language_url: "{{ url_for('static', filename='tinymce/langs/fr_FR.js') }}",
+            setup: function(editor) {
+                editor.on('change', function() {
+                    tinymce.triggerSave();
+                });
+            }
         });
     </script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -65,6 +70,10 @@
         document.getElementById('articleForm').addEventListener('submit', function(event) {
             event.preventDefault();
             tinymce.triggerSave();
+            if (document.getElementById('content').value.trim() === '') {
+                alert('Le contenu ne peut pas être vide');
+                return false;
+            }
             this.submit();
         });
     </script>
